2011-10-15  Mark Pilgrim  <pilgrim@chromium.org>

        [File API] URL methods required arguments
        https://bugs.webkit.org/show_bug.cgi?id=69692

        Reviewed by Adam Barth.

        * fast/files/url-required-arguments-expected.txt: Added.
        * fast/files/url-required-arguments.html: Added.

2011-10-14  Mark Pilgrim  <pilgrim@chromium.org>

        [File API] Test how FileReader substitutes illegal UTF-8 characters
        https://bugs.webkit.org/show_bug.cgi?id=69691

        Reviewed by Adam Barth.

        * fast/files/file-reader-fffd-expected.txt: Added.
        * fast/files/file-reader-fffd.html: Added.

2011-10-14  Mark Pilgrim  <pilgrim@chromium.org>

        [FileSystem API] readonly attributes test
        https://bugs.webkit.org/show_bug.cgi?id=69655

        Reviewed by Adam Barth.

        * fast/filesystem/resources/simple-readonly.js: Added.
        (setReadonlyProperty):
        (errorCallback):
        (getFileCallback):
        (successCallback):
        * fast/filesystem/simple-readonly-expected.txt: Added.
        * fast/filesystem/simple-readonly.html: Added.

2011-10-14  Mark Pilgrim  <pilgrim@chromium.org>

        [FileSystem API] restricted Unicode characters in names
        https://bugs.webkit.org/show_bug.cgi?id=69657

        Reviewed by Adam Barth.

        * fast/filesystem/op-restricted-unicode-expected.txt: Added.
        * fast/filesystem/op-restricted-unicode.html: Added.
        * fast/filesystem/resources/op-restricted-unicode.js: Added.
        (testCases.name.precondition.tests):
        (testCases):

2011-10-14  Gavin Barraclough  <baraclough@apple.com>

        Most built-in properties are not deletable
        https://bugs.webkit.org/show_bug.cgi?id=61014

        Reviewed by Filip Pizlo.

        Mostly checking in passing results, added a couple of extra test cases to fast/js/delete-syntax.

        * fast/js/delete-syntax-expected.txt:
        * fast/js/script-tests/delete-syntax.js: